src/sass/components/main/_hero-main.scss
.hero-main {

    background-color: getColor('white');

    position: relative;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    margin: 0 auto;
    background-image: -webkit-gradient(linear,
            left top,
            left bottom,
            from(rgba(0, 0, 0, 0.65)),
            to(rgba(0, 0, 0, 0.65))),
        url(../images/main/header/home-mobile.jpg);
    background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
        url(../images/main/header/home-mobile.jpg);
}

@media (min-device-pixel-ratio: 2),
(-webkit-min-device-pixel-ratio: 2),
(min-resolution: 192dpi),
(min-resolution: 2dppx) {
    .hero-main {
        background-image: -webkit-gradient(linear,
                left top,
                left bottom,
                from(rgba(0, 0, 0, 0.65)),
                to(rgba(0, 0, 0, 0.65))),
            url(../images/main/header/home-mobile@2x.jpg);
        background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
            url(../images/main/header/home-mobile@2x.jpg);
    }
}

@media screen and (min-width: 1024px) and (max-width:1279px) {
    .hero-main {
        background-image: -webkit-gradient(linear,
                left top,
                left bottom,
                from(rgba(0, 0, 0, 0.65)),
                to(rgba(0, 0, 0, 0.65))),
            url(../images/main/header/home-tablet.jpg);
        background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
            url(../images/main/header/home-tablet.jpg);
    }
}

@media screen and (min-width: 1024px) and (max-width:1279px) and (min-device-pixel-ratio: 2),
screen and (min-width: 1024px) and (max-width:1279px) and (-webkit-min-device-pixel-ratio: 2),
screen and (min-width: 1024px) and (max-width:1279px) and (min-resolution: 192dpi),
screen and (min-width: 1024px) and (max-width:1279px) and (min-resolution: 2dppx) {
    .hero-main {
        background-image: -webkit-gradient(linear,
                left top,
                left bottom,
                from(rgba(0, 0, 0, 0.65)),
                to(rgba(0, 0, 0, 0.65))),
            url(../images/main/header/home-tablet@2x.jpg);
        background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
            url(../images/main/header/home-tablet@2x.jpg);
    }
}

@media screen and (min-width: 1280px) {
    .hero-main {
        background-image: -webkit-gradient(linear,
                left top,
                left bottom,
                from(rgba(0, 0, 0, 0.65)),
                to(rgba(0, 0, 0, 0.65))),
            url(../images/main/header/home-desktop.jpg);
        background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
            url(../images/main/header/home-desktop.jpg);
    }
}

@media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2),
screen and (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2),
screen and (min-width: 1280px) and (min-resolution: 192dpi),
screen and (min-width: 1280px) and (min-resolution: 2dppx) {
    .hero-main {
        background-image: -webkit-gradient(linear,
                left top,
                left bottom,
                from(rgba(0, 0, 0, 0.65)),
                to(rgba(0, 0, 0, 0.65))),
            url(../images/main/header/home-dekstop@2x.jpg);
        background-image: linear-gradient(rgba(0, 0, 0, 0.65),
                rgba(0, 0, 0, 0.65)),
            url(../images/main/header/home-dekstop@2x.jpg);
    }
}

.hero__phrase {
    text-transform: uppercase;
    font-family: 'FilmP3';
    font-weight: 700;
    font-size: 96px;
    line-height: 1.072;
    letter-spacing: 0.3em;
    color: getColor('white');
    margin-bottom: 24px;
    margin-left: calc(96 * 0.3);


    @media screen and (min-width: 1024px) {
        font-size: 128px;
        line-height: 1.078;
    }
}

.hero__about {
    font-family: 'Montserrat';
    font-weight: 600;
    font-size: 16px;
    line-height: 1.25;
    letter-spacing: 0.02em;
    color: getColor('white');
    margin-bottom: 40px;

    @media screen and (min-width:1024px) {
        font-size: 20px;
        line-height: 1.2;
    }
}

.hero__text {
    text-transform: uppercase;
    font-family: 'Times New Roman';
    font-weight: 700;
    font-size: 32px;
    line-height: 1.15;
    letter-spacing: 0.05em;
    color: getColor('white');


    @media screen and (min-width:1024px) {
        font-size: 36px;
        line-height: 1.138;

    }
}

@media screen and (max-width:1023px) {
    .opacity-btn {
        opacity: 0.4;
    }
}

@media screen and (min-width:1280px) {
    .opacity-btn {
        opacity: 0.4;
    }
}

.link__socialsvg {
    fill: getColor('border-golden');
    height: 20px;
    width: 20px;

}

@media screen and (min-width:1024px) and (max-width:1279px) {
    .link__socialsvg {
        height: 24px;
        width: 24px;
    }
}

@media screen and (min-width:1280px) {
    .desktop-none {
        display: none;
    }
}

.link__social {
    display: flex;
    align-items: flex-start;
    flex-direction: row;
    gap: 20px;
    position: absolute;
    bottom: 20px;

    @media screen and (min-width:1024px) and (max-width:1279px) {
        bottom: 15px;
    }

}

.location-address {
    border: 1px solid getColor('border-golden');
    border-radius: 2px;
    font-family: 'Montserrat';
    font-size: 16px;
    line-height: 1.25;
    letter-spacing: 0.01em;
    color: getColor('map-link');
    padding: 8px;
    gap: 10px;
    display: inline-flex;
    position: absolute;
    top: 64px;
    right: 15px;
    align-items: center;
    text-decoration: none;
    font-style: normal;

    @media screen and (min-width:1024px) and (max-width:1279px) {
        justify-content: flex-start;
        position: relative;
        top: -15px;
    }

    @media screen and (min-width:1280px) {
        position: static;
    }
}

.textbox {
    padding-top: 181px;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    flex-direction: column;
    text-align: center;
    margin-bottom: 335px;
    justify-content: center;
}

.div-hero-btn {
    display: flex;
    flex-direction: column;
    gap: 24px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    bottom: 102px;
    position: relative;

    @media screen and (min-width:1024px) and (max-width:1279px) {
        flex-direction: row;
        gap: 40px;
        bottom: 64px;
        justify-content: flex-end;

    }

    @media screen and (min-width:1280px) {
        flex-direction: row;
        gap: 60px;
        position: static;
        margin: 0;
    }
}

.hero_bottom {
    @media screen and(min-width:1280px) {
        display: flex;
        flex-direction: row;
        padding-bottom: 64px;
        align-items: flex-end;
        justify-content: space-between;
    }
}

